Deploy preview for PR 510 🛫

--- a/pr-preview/pr-510/Tutorials/Aerosol/Aerosol_Tutorial/index.html
+++ b/pr-preview/pr-510/Tutorials/Aerosol/Aerosol_Tutorial/index.html
@@ -6504,7 +6504,7 @@ span.linenos.special { color: #000000; background-color: #ffffc0; padding-left: 
 <div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
 </div>
 <div class="jp-InputArea jp-Cell-inputArea">
-<div class="jp-InputPrompt jp-InputArea-prompt">In [2]:</div><div class="jp-CodeMirrorEditor jp-Editor jp-InputArea-editor" data-type="inline">
+<div class="jp-InputPrompt jp-InputArea-prompt">In [1]:</div><div class="jp-CodeMirrorEditor jp-Editor jp-InputArea-editor" data-type="inline">
 <div class="CodeMirror cm-s-jupyter">
 <div class="zeroclipboard-container">
 <clipboard-copy ,="" aria-label="Copy to Clipboard" for="cell-1">
@@ -6520,19 +6520,15 @@ span.linenos.special { color: #000000; background-color: #ffffc0; padding-left: 
 <div class="highlight-ipynb hl-python"><pre><span></span><span class="kn">import</span> <span class="nn">numpy</span> <span class="k">as</span> <span class="nn">np</span>
 <span class="kn">import</span> <span class="nn">matplotlib.pyplot</span> <span class="k">as</span> <span class="nn">plt</span>
 
-<span class="kn">from</span> <span class="nn">particula.particles.representation_builders</span> <span class="kn">import</span> <span class="n">PresetParticleRadiusBuilder</span>
-<span class="kn">from</span> <span class="nn">particula.gas.atmosphere_builders</span> <span class="kn">import</span> <span class="n">AtmosphereBuilder</span>
-<span class="kn">from</span> <span class="nn">particula.gas.vapor_pressure_factories</span> <span class="kn">import</span> <span class="n">VaporPressureFactory</span>
-<span class="kn">from</span> <span class="nn">particula.gas.species_builders</span> <span class="kn">import</span> <span class="n">GasSpeciesBuilder</span>
+<span class="kn">from</span> <span class="nn">particula.particles</span> <span class="kn">import</span> <span class="n">PresetParticleRadiusBuilder</span>
+<span class="kn">from</span> <span class="nn">particula.gas</span> <span class="kn">import</span> <span class="n">AtmosphereBuilder</span><span class="p">,</span> <span class="n">VaporPressureFactory</span><span class="p">,</span> <span class="n">GasSpeciesBuilder</span>
 <span class="kn">from</span> <span class="nn">particula.aerosol</span> <span class="kn">import</span> <span class="n">Aerosol</span>
 </pre></div>
 <div class="clipboard-copy-txt" id="cell-1">import numpy as np
 import matplotlib.pyplot as plt
 
-from particula.particles.representation_builders import PresetParticleRadiusBuilder
-from particula.gas.atmosphere_builders import AtmosphereBuilder
-from particula.gas.vapor_pressure_factories import VaporPressureFactory
-from particula.gas.species_builders import GasSpeciesBuilder
+from particula.particles import PresetParticleRadiusBuilder
+from particula.gas import AtmosphereBuilder, VaporPressureFactory, GasSpeciesBuilder
 from particula.aerosol import Aerosol</div>
 </div>
 </div>
@@ -6557,7 +6553,7 @@ from particula.aerosol import Aerosol</div>
 <div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
 </div>
 <div class="jp-InputArea jp-Cell-inputArea">
-<div class="jp-InputPrompt jp-InputArea-prompt">In [3]:</div><div class="jp-CodeMirrorEditor jp-Editor jp-InputArea-editor" data-type="inline">
+<div class="jp-InputPrompt jp-InputArea-prompt">In [2]:</div><div class="jp-CodeMirrorEditor jp-Editor jp-InputArea-editor" data-type="inline">
 <div class="CodeMirror cm-s-jupyter">
 <div class="zeroclipboard-container">
 <clipboard-copy ,="" aria-label="Copy to Clipboard" for="cell-2">
@@ -6698,7 +6694,7 @@ Gas mixture at 298.15 K and 101325.0 Pa consisting of ['Glycerol']
 <div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
 </div>
 <div class="jp-InputArea jp-Cell-inputArea">
-<div class="jp-InputPrompt jp-InputArea-prompt">In [5]:</div><div class="jp-CodeMirrorEditor jp-Editor jp-InputArea-editor" data-type="inline">
+<div class="jp-InputPrompt jp-InputArea-prompt">In [3]:</div><div class="jp-CodeMirrorEditor jp-Editor jp-InputArea-editor" data-type="inline">
 <div class="CodeMirror cm-s-jupyter">
 <div class="zeroclipboard-container">
 <clipboard-copy ,="" aria-label="Copy to Clipboard" for="cell-3">
