--- a/pr-preview/pr-510/Tutorials/Dynamics/Coagulation/Coagulation_1_PMF_Pattern/index.html
+++ b/pr-preview/pr-510/Tutorials/Dynamics/Coagulation/Coagulation_1_PMF_Pattern/index.html
@@ -6566,9 +6566,7 @@ The coagulation process is modeled using a discrete bin approach. We define the 
 <span class="c1"># particula imports</span>
 <span class="kn">from</span> <span class="nn">particula</span> <span class="kn">import</span> <span class="n">particles</span>
 <span class="kn">from</span> <span class="nn">particula.aerosol</span> <span class="kn">import</span> <span class="n">Aerosol</span>
-
-<span class="kn">from</span> <span class="nn">particula.gas.species_builders</span> <span class="kn">import</span> <span class="n">PresetGasSpeciesBuilder</span>
-<span class="kn">from</span> <span class="nn">particula.gas.atmosphere_builders</span> <span class="kn">import</span> <span class="n">AtmosphereBuilder</span>
+<span class="kn">from</span> <span class="nn">particula.gas</span> <span class="kn">import</span> <span class="n">PresetGasSpeciesBuilder</span><span class="p">,</span> <span class="n">AtmosphereBuilder</span>
 
 <span class="kn">from</span> <span class="nn">particula.dynamics</span> <span class="kn">import</span> <span class="n">particle_process</span>
 <span class="kn">from</span> <span class="nn">particula.dynamics</span> <span class="kn">import</span> <span class="n">coagulation</span>
@@ -6579,9 +6577,7 @@ import matplotlib.pyplot as plt
 # particula imports
 from particula import particles
 from particula.aerosol import Aerosol
-
-from particula.gas.species_builders import PresetGasSpeciesBuilder
-from particula.gas.atmosphere_builders import AtmosphereBuilder
+from particula.gas import PresetGasSpeciesBuilder, AtmosphereBuilder
 
 from particula.dynamics import particle_process
 from particula.dynamics import coagulation</div>
