--- a/pr-preview/pr-510/Tutorials/Dynamics/Condensation/Condensation_1_Bin/index.html
+++ b/pr-preview/pr-510/Tutorials/Dynamics/Condensation/Condensation_1_Bin/index.html
@@ -6550,24 +6550,20 @@ span.linenos.special { color: #000000; background-color: #ffffc0; padding-left: 
 
 <span class="c1"># particula imports</span>
 <span class="kn">from</span> <span class="nn">particula</span> <span class="kn">import</span> <span class="n">particles</span>
-<span class="kn">from</span> <span class="nn">particula.gas.atmosphere_builders</span> <span class="kn">import</span> <span class="n">AtmosphereBuilder</span>
-<span class="kn">from</span> <span class="nn">particula.gas.vapor_pressure_factories</span> <span class="kn">import</span> <span class="n">VaporPressureFactory</span>
-<span class="kn">from</span> <span class="nn">particula.gas.species_builders</span> <span class="kn">import</span> <span class="n">GasSpeciesBuilder</span>
+<span class="kn">from</span> <span class="nn">particula.gas</span> <span class="kn">import</span> <span class="n">AtmosphereBuilder</span><span class="p">,</span> <span class="n">VaporPressureFactory</span><span class="p">,</span> <span class="n">GasSpeciesBuilder</span>
 <span class="kn">from</span> <span class="nn">particula.aerosol</span> <span class="kn">import</span> <span class="n">Aerosol</span>
-<span class="kn">from</span> <span class="nn">particula.dynamics.particle_process</span> <span class="kn">import</span> <span class="n">MassCondensation</span>
-<span class="kn">from</span> <span class="nn">particula.dynamics.condensation.condensation_strategies</span> <span class="kn">import</span> <span class="n">CondensationIsothermal</span>
+<span class="kn">from</span> <span class="nn">particula.dynamics</span> <span class="kn">import</span> <span class="n">MassCondensation</span>
+<span class="kn">from</span> <span class="nn">particula.dynamics.condensation</span> <span class="kn">import</span> <span class="n">CondensationIsothermal</span>
 </pre></div>
 <div class="clipboard-copy-txt" id="cell-1">import numpy as np
 import matplotlib.pyplot as plt
 
 # particula imports
 from particula import particles
-from particula.gas.atmosphere_builders import AtmosphereBuilder
-from particula.gas.vapor_pressure_factories import VaporPressureFactory
-from particula.gas.species_builders import GasSpeciesBuilder
+from particula.gas import AtmosphereBuilder, VaporPressureFactory, GasSpeciesBuilder
 from particula.aerosol import Aerosol
-from particula.dynamics.particle_process import MassCondensation
-from particula.dynamics.condensation.condensation_strategies import CondensationIsothermal</div>
+from particula.dynamics import MassCondensation
+from particula.dynamics.condensation import CondensationIsothermal</div>
 </div>
 </div>
 </div>
