Deploy preview for PR 511 🛫

--- a/pr-preview/pr-511/Tutorials/index.html
+++ b/pr-preview/pr-511/Tutorials/index.html
@@ -5438,7 +5438,7 @@
 <li>
 <p><strong><a href="Dynamics/">Dynamics</a></strong></p>
 <hr />
-<p><a href="Dynamics/">Dynamics</a> is a collection of classes that processes for the <code>Aerosol</code> objects, to perform coagulation, condensation, and other processes.</p>
+<p><a href="Dynamics/">Dynamics</a> is a collection of classes that processes <code>Aerosol</code> objects, to perform coagulation, condensation, and other processes.</p>
 <p><a href="Dynamics/"><span class="twemoji"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M13.22 19.03a.75.75 0 0 1 0-1.06L18.19 13H3.75a.75.75 0 0 1 0-1.5h14.44l-4.97-4.97a.749.749 0 0 1 .326-1.275.75.75 0 0 1 .734.215l6.25 6.25a.75.75 0 0 1 0 1.06l-6.25 6.25a.75.75 0 0 1-1.06 0"/></svg></span> Tutorial</a></p>
 </li>
 <li>
