--- a/pr-preview/pr-511/How-To-Guides/index.html
+++ b/pr-preview/pr-511/How-To-Guides/index.html
@@ -5450,7 +5450,7 @@
 <li>
 <p><strong><a href="Nucleation/">Nucleation</a></strong></p>
 <hr />
-<p>How to simulate aerosol nucleation using a custom process. Showing how to add a custom process for a nucleation event.</p>
+<p>How to simulate aerosol nucleation by adding particles during simulations. Showing how to add a nucleation event.</p>
 <p><a href="Nucleation/"><span class="twemoji"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M13.22 19.03a.75.75 0 0 1 0-1.06L18.19 13H3.75a.75.75 0 0 1 0-1.5h14.44l-4.97-4.97a.749.749 0 0 1 .326-1.275.75.75 0 0 1 .734.215l6.25 6.25a.75.75 0 0 1 0 1.06l-6.25 6.25a.75.75 0 0 1-1.06 0"/></svg></span> Tutorial</a></p>
 </li>
 </ul>
