--- a/pr-preview/pr-561/Tutorials/Aerosol/Aerosol_Tutorial/index.html
+++ b/pr-preview/pr-561/Tutorials/Aerosol/Aerosol_Tutorial/index.html
@@ -5940,6 +5940,7 @@ span.linenos.special { color: #000000; background-color: #ffffc0; padding-left: 
                     processEnvironments: true
                 },
                 displayAlign: 'center',
+                messageStyle: 'none',
                 CommonHTML: {
                     linebreaks: {
                     automatic: true
