--- a/pr-preview/pr-561/Tutorials/Dynamics/Coagulation/Coagulation_4_Compared/index.html
+++ b/pr-preview/pr-561/Tutorials/Dynamics/Coagulation/Coagulation_4_Compared/index.html
@@ -5978,6 +5978,7 @@ span.linenos.special { color: #000000; background-color: #ffffc0; padding-left: 
                     processEnvironments: true
                 },
                 displayAlign: 'center',
+                messageStyle: 'none',
                 CommonHTML: {
                     linebreaks: {
                     automatic: true
